--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,14 @@
 org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 # kotlin
 kotlin.code.style=official
+kotlin.js.compiler=ir
 kotlin.native.binary.memoryModel=experimental
 kotlin.native.ignoreDisabledTargets=true
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.stability.nowarn=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
 org.jetbrains.compose.experimental.uikit.enabled=true
+org.jetbrains.compose.experimental.jscanvas.enabled=true
 # Android
 android.useAndroidX=true
 android.nonTransitiveRClass=true
