--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,13 +7,13 @@ kotlin = "1.9.0"
 
 androidxCore = "1.10.1"
 androidDesugarJdkLibs = "2.0.3"
-compose = "2023.09.00"
+compose = "2023.10.01"
 composeCompiler = "1.5.2"
-composeJb = "1.5.0"
-composeMaterial3 = "1.2.0-alpha07"
+composeJb = "1.5.1"
+composeMaterial3 = "1.2.0-alpha10"
 composeHiltNavigatiaon = "1.0.0"
 androidxLifecycle = "2.6.2"
-androidxActivity = "1.8.0-beta01"
+androidxActivity = "1.8.0"
 androidxFragment = "1.6.1"
 androidxSplashScreen = "1.0.1"
 kotlinxCoroutines = "1.7.3"
@@ -21,14 +21,14 @@ accompanist = "0.30.1"
 junit = "4.13.2"
 androidxTestExt = "1.1.5"
 androidxTestEspresso = "3.5.1"
-dagger = "2.47"
+dagger = "2.48.1"
 koin = "3.4.3"
 ktlint = "0.49.1"
 kotlinxSerialization = "1.6.0"
 ktor = "2.3.4"
 roborazzi = "1.6.0-alpha-3"
 showkase = "1.0.0-beta18"
-ksp = "1.9.0-1.0.13"
+ksp = "1.9.10-1.0.13"
 firebaseBom = "32.2.3"
 multiplatformFirebase = "1.8.1"
 kermit = "1.2.2"
@@ -150,6 +150,7 @@ showkaseRuntime = { group = "com.airbnb.android", name = "showkase", version.ref
 showkaseProcessor = { group = "com.airbnb.android", name = "showkase-processor", version.ref = "showkase" }
 
 [plugins]
+compose = { id = "org.jetbrains.compose", version.ref = "composeJb" }
 androidGradlePlugin = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 androidGradleLibraryPlugin = { id = "com.android.library", version.ref = "androidGradlePlugin" }
 kotlinGradlePlugin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
