:green_heart: describe-problem を任意項目に変更

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -23,7 +23,7 @@ body:
       description: 機能要望は問題に関連するものですか？説明してください。
       placeholder: いつも悔しい思いをするのは
     validations:
-      required: true
+      required: false
 
   - type: textarea
     id: solution
