:wrench: labeler の定義を修正

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -22,7 +22,7 @@ labels:
   - label: "@type/ci"
     title: '^:green_heart:.*'
     files:
-      - "\.github/.+"
+      - '\.github/.+'
 
   # App module labels
   - label: "@app/android"
