--- a/gradle.properties
+++ b/gradle.properties
@@ -32,6 +32,7 @@ kotlin.code.style=official
 kotlin.js.compiler=ir
 kotlin.native.binary.memoryModel=experimental
 kotlin.native.ignoreDisabledTargets=true
+kotlin.mpp.applyDefaultHierarchyTemplate=false
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.stability.nowarn=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
