--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,33 @@
+########################################################
 # Gradle
-org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
-# kotlin
+########################################################
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+# Ensure important default jvmargs aren't overwritten. See https://github.com/gradle/gradle/issues/19750
+org.gradle.jvmargs=-Xmx6g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx6g" -XX:+UseParallelGC -XX:MaxMetaspaceSize=1g
+
+# When configured, Gradle will run in incubating parallel mode.
+# This option should only be used with decoupled projects. More details, visit
+# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+org.gradle.parallel=true
+
+# Not encouraged by Gradle and can produce weird results. Wait for isolated projects instead.
+org.gradle.configureondemand=false
+
+# Enable caching between builds.
+org.gradle.caching=true
+
+# Enable configuration caching between builds.
+org.gradle.configuration-cache=true
+
+# This option is set because of https://github.com/google/play-services-plugins/issues/246
+# to generate the Configuration Cache regardless of incompatible tasks.
+# See https://github.com/android/nowinandroid/issues/1022 before using it.
+org.gradle.configuration-cache.problems=warn
+
+########################################################
+# Kotlin
+########################################################
 kotlin.code.style=official
 kotlin.js.compiler=ir
 kotlin.native.binary.memoryModel=experimental
@@ -10,6 +37,9 @@ kotlin.mpp.stability.nowarn=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
 org.jetbrains.compose.experimental.uikit.enabled=true
 org.jetbrains.compose.experimental.jscanvas.enabled=true
+
+########################################################
 # Android
+########################################################
 android.useAndroidX=true
 android.nonTransitiveRClass=true
