--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,7 +25,7 @@ jobs:
         uses: gradle/gradle-build-action@v2.9.0
 
       - name: Unit Tests
-        run: ./gradlew :app:android:testDevDebugUnitTest
+        run: ./gradlew testDebugUnitTest
 
       - name: Build
         run: ./gradlew :app:android:assembleDevDebug
