:green_heart: Dependabot の構成ファイルに Gradle を追加

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,8 @@ updates:
     directory: "/"
     schedule:
       interval: weekly
+
+  - package-ecosystem: gradle
+    directory: "/"
+    schedule:
+      interval: weekly
