:green_heart: Dependabot の構成ファイルに Swift を追加

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,3 +11,8 @@ updates:
     directory: "/"
     schedule:
       interval: weekly
+
+  - package-ecosystem: swift
+    directory: "/"
+    schedule:
+      interval: weekly
