--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,7 +25,7 @@ ossLicenses = "17.0.1"
 detekt = "1.23.4"
 twitterComposeRule = "0.0.26"
 kover = "0.7.4"
-supabase = "1.4.5"
+supabase = "2.0.0-alpha-2"
 logback = "1.4.11"
 graphqlKotlin = "7.0.2"
 kotest = "5.8.0"
