--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,9 +10,9 @@ updates:
   - package-ecosystem: gradle
     directory: "/"
     schedule:
-      interval: weekly
+      interval: daily
 
   - package-ecosystem: swift
     directory: "/"
     schedule:
-      interval: weekly
+      interval: daily
