--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ ktor = "2.3.6"
 ksp = "1.9.21-1.0.15"
 firebaseBom = "32.2.3"
 multiplatformFirebase = "1.10.4"
+multiplatformSettings = "1.1.1"
 kermit = "2.0.2"
 okHttp = "4.12.0"
 ossLicensesPlugin = "0.10.6"
@@ -68,6 +69,8 @@ androidxWindow = { module = "androidx.window:window", version = "1.1.0" }
 androidxSplashScreen = { module = "androidx.core:core-splashscreen", version.ref = "androidxSplashScreen" }
 javaPoet = { module = "com.squareup:javapoet", version = "1.13.0" }
 
+multiplatformSettingsNoArg = { module = "com.russhwolf:multiplatform-settings-no-arg", version.ref = "multiplatformSettings" }
+multiplatformSettingsCoroutines = { module = "com.russhwolf:multiplatform-settings-coroutines", version.ref = "multiplatformSettings" }
 kotlinSerializationJson = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 
 ktorClientCore = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
