--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,8 @@ detekt = "1.23.4"
 twitterComposeRule = "0.0.26"
 kover = "0.7.5"
 supabase = "2.0.0"
+sqldelight = "2.0.1"
+stately = "2.0.6"
 logback = "1.4.14"
 graphqlKotlin = "7.0.2"
 kotest = "5.8.0"
@@ -94,6 +96,17 @@ supabaseGotrue = { module = "io.github.jan-tennert.supabase:gotrue-kt", version.
 supabaseRealtime = { module = "io.github.jan-tennert.supabase:realtime-kt", version.ref = "supabase" }
 supabasePostgrest = { module = "io.github.jan-tennert.supabase:postgrest-kt", version.ref = "supabase" }
 
+sqldelightGradlePlugin = { module = "app.cash.sqldelight:gradle-plugin", version.ref = "sqldelight" }
+sqldelightPrimitiveAdapters = { module = "app.cash.sqldelight:primitive-adapters", version.ref = "sqldelight" }
+sqldelightCoroutinesExtensions = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqldelight" }
+sqldelightAndroidDriver = { module = "app.cash.sqldelight:android-driver", version.ref = "sqldelight" }
+sqldelightNativeDriver = { module = "app.cash.sqldelight:native-driver", version.ref = "sqldelight" }
+sqldelightWebWorkerDriver = { module = "app.cash.sqldelight:web-worker-driver", version.ref = "sqldelight" }
+
+statelyCommon = { module = "co.touchlab:stately-common", version.ref = "stately" }
+statelyIsolate = { module = "co.touchlab:stately-isolate", version.ref = "stately" }
+statelyIsoCollections = { module = "co.touchlab:stately-iso-collections", version.ref = "stately" }
+
 okHttpCore = { module = "com.squareup.okhttp3:okhttp", version.ref = "okHttp" }
 okHttpLoggingInterceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okHttp" }
 okIo = { module = "com.squareup.okio:okio", version = "3.6.0" }
@@ -137,6 +150,7 @@ plugins = [
     "completeKotlinPlugin",
     "detektGradlePlugin",
     "ossLicensesPlugin",
+    "sqldelightGradlePlugin",
     "koverPlugin",
     "firebaseCrashlyticsGradlePlugin",
     "kotestMultiplatformPlugin",
