:green_heart: runs-on macos-13-arm64 -> macos-13

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
         run: ./gradlew :app:android:assembleDevDebug
 
   ios:
-    runs-on: macos-13-arm64
+    runs-on: macos-13
     steps:
       - uses: actions/checkout@v4
 
