--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,24 +89,32 @@ jobs:
     runs-on: macos-13
     needs: filter
     if: needs.filter.outputs.check-ios == 'true'
+    strategy:
+      matrix:
+        destination: [ 'platform=iOS Simulator,OS=17.2,name=iPhone 15' ]
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4.1.1
 
-      - uses: actions/setup-java@v4
+      - name: Setup Java JDK
+        uses: actions/setup-java@v4.0.0
         with:
           distribution: 'zulu'
           java-version: 17
 
+      - name: Setup Xcode version
+        uses: maxim-lobanov/setup-xcode@v1.6.0
+        with:
+          xcode-version: '15.1.0'
+
       - name: Build iOS framework
         run: ./gradlew :app:ios-combined:assembleNitoKmpReleaseXCFramework
 
-      - name: Build iOS app
-        continue-on-error: true # TODO: Fix the certificates
-        run: xcodebuild -project app/ios/App/Nito/Nito.xcodeproj -configuration Debug -scheme Dev -sdk iphoneos -destination name='iPhone 8' build
-
       - name: Run iOS unit tests
-        continue-on-error: true # TODO: Fix the certificates
-        run: xcodebuild test -project app/ios/App/Nito/Nito.xcodeproj -configuration Debug -scheme Dev -sdk iphoneos -destination name='iPhone 8' build -test-timeouts-enabled YES
+        continue-on-error: true
+        run: xcodebuild clean build -project app/ios/App/Nito/Nito.xcodeproj -configuration Debug -scheme Dev -sdk iphoneos -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO -test-timeouts-enabled YES
+        env:
+          destination: ${{ matrix.destination }}
 
   backend:
     runs-on: ubuntu-22.04
