--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,6 +13,6 @@ updates:
       interval: daily
 
   - package-ecosystem: swift
-    directory: "/"
+    directory: "/app/ios"
     schedule:
       interval: daily
