:green_heart: swift の directory を変

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,6 +13,6 @@ updates:
       interval: daily
 
   - package-ecosystem: swift
-    directory: "/app/ios"
+    directory: "/app/ios/Modules"
     schedule:
       interval: daily
