:green_heart: Dependabot の構成ファイルに labels を追加

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,13 +6,21 @@ updates:
     directory: "/"
     schedule:
       interval: weekly
+    labels:
+      - 'dependencies'
+      - 'ignore-for-release'
 
   - package-ecosystem: gradle
     directory: "/"
     schedule:
       interval: daily
+    open-pull-requests-limit: 20
+    labels:
+      - 'dependencies'
 
   - package-ecosystem: swift
     directory: "/app/ios/Modules"
     schedule:
       interval: daily
+    labels:
+      - 'dependencies'
