--- a/.editorconfig
+++ b/.editorconfig
@@ -17,5 +17,5 @@ ij_kotlin_allow_trailing_comma_on_call_site = true
 indent_size = 2
 trim_trailing_whitespace = false
 
-[*.{cjs,mjs,js,json,yml,yaml}]
+[*.{cjs,mjs,js,json,json5,yml,yaml}]
 indent_size = 2
