--- a/.github/workflows/assign-author-to-pr.yml
+++ b/.github/workflows/assign-author-to-pr.yml
@@ -9,5 +9,6 @@ jobs:
     name: Assign author to PR
     runs-on: ubuntu-latest
     steps:
+      # https://github.com/marketplace/actions/assign-author
       - name: Assign Author
-        uses: technote-space/assign-author@v1.6.2
+        uses: technote-space/assign-author@9558557c5c4816f38bd06176fbc324ba14bb3160 # v1.6.2
