--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,90 +1,117 @@
+# noinspection YAMLSchemaValidation
 version: 1
 
 labels:
   # Type labels
-  - label: "@type/feature"
-    title: '^(:sparkles:|:tada:|:art:).*'
-  - label: "@type/improve"
-    title: '^(:\+1:|:recycle:|:rocket:).*'
-  - label: "@type/fix"
-    title: '^:bug:.*'
-  - label: "@type/docs"
-    title: '^:books:.*'
-    files:
-      - "docs/.+"
   - label: "@type/build"
-    title: '^(:wrench:|:up:).*'
+    title: '^build(?:\(.+\))?\!?:'
     files:
-      - "settings.gradle.kts"
-      - "**/build.gradle.kts"
-      - "gradle/.+"
-      - "tools/.+"
+      - "**/*.gradle.kts$"
+      - "build-logic/**/*"
+
   - label: "@type/ci"
-    title: '^:green_heart:.*'
+    title: '^ci(?:\(.+\))?\!?:'
     files:
       - '\.github/.+'
+      - "scripts/.+"
+      - "tools/.+"
 
-  # App module labels
+  - label: "@type/docs"
+    title: '^docs:(?:\(.+\))?\!?:'
+    files:
+      - "docs/.+"
+      - "**/README.md$"
+
+  - label: "@type/feature"
+    title: '^feat:(?:\(.+\))?\!?:'
+
+  - label: "@type/fix"
+    title: '^fix:(?:\(.+\))?\!?:'
+
+  - label: "@type/improve"
+    title: '^(style|refactor|perf)(?:\(.+\))?\!?:'
+
+  # App Module labels
   - label: "@app/android"
     files:
       - "app/android/.+"
-      - "**/androidMain/**/.+"
+
   - label: "@app/backend"
     files:
       - "app/backend/.+"
+
+  - label: "@app/frontend"
+    files:
+      - "app/frontend/.+"
+      - "app/web/.+"
+
   - label: "@app/ios"
     files:
       - "app/ios/.+"
       - "app/ios-combined/.+"
-      - "**/iosMain/**/.+"
-  - label: "@app/frontend"
-    files:
-      - "app/web/.+"
-      - "**/jsMain/**/.+"
 
-  # Core module labels
+  - label: "@app/shared"
+    files:
+      - "app/shared/.+"
+
+  # Core Module labels
+  - label: "@core/analytics"
+    files:
+      - "core/analytics/.+"
+
   - label: "@core/common"
     files:
       - "core/common/.+"
+
   - label: "@core/data"
     files:
       - "core/data/.+"
+
   - label: "@core/database"
     files:
       - "core/database/.+"
+
+  - label: "@core/datastore"
+    files:
+      - "core/datastore/.+"
+
   - label: "@core/designsystem"
     files:
       - "core/designsystem/.+"
+
   - label: "@core/domain"
     files:
       - "core/domain/.+"
+
   - label: "@core/model"
     files:
       - "core/model/.+"
+
   - label: "@core/network"
     files:
       - "core/network/.+"
+
   - label: "@core/testing"
     files:
       - "core/testing/.+"
+
   - label: "@core/ui"
     files:
       - "core/ui/.+"
 
-  # Feature module labels
+  # Feature Module labels
   - label: "@feature/auth"
     files:
       - "feature/auth/.+"
-      - "app/ios/Modules/Sources/Auth/.+"
+
   - label: "@feature/schedule"
     files:
       - "feature/schedule/.+"
-      - "app/ios/Modules/Sources/Schedule/.+"
+
   - label: "@feature/settings"
     files:
       - "feature/settings/.+"
-      - "app/ios/Modules/Sources/Settings/.+"
+
   - label: "@feature/top"
     files:
       - "feature/top/.+"
-      - "app/ios/Modules/Sources/Top/.+"
