--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,8 +11,7 @@ compose = "1.6.11"
 androidxActivity = "1.9.2"
 androidxSplashScreen = "1.0.1"
 kotlinxCoroutines = "1.9.0"
-koin = "4.0.0"
-koinCompose = "1.1.5"
+koinBom = "4.0.0"
 ktlint = "0.49.1"
 kotlinxSerialization = "1.7.2"
 ktor = "2.3.12"
@@ -54,8 +53,9 @@ kotestMultiplatformPlugin = { module = "io.kotest:kotest-framework-multiplatform
 
 androidDesugarJdkLibs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "androidDesugarJdkLibs" }
 
-koin = { module = "io.insert-koin:koin-core", version.ref = "koin" }
-koinCompose = { module = "io.insert-koin:koin-compose", version.ref = "koinCompose" }
+koinBom = { module = "io.insert-koin:koin-bom", version.ref = "koinBom" }
+koin = { module = "io.insert-koin:koin-core" }
+koinCompose = { module = "io.insert-koin:koin-compose" }
 
 kotlinxCoroutinesCore = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
 
